--- a/srcds/resource/source-python/translations/warcraft.ini
+++ b/srcds/resource/source-python/translations/warcraft.ini
@@ -3,3 +3,33 @@ en = "{hero.name} - Level: {hero.level} - XP: {hero.xp}/{hero.required_xp}"
 
 [Level Up]
 en = "You've reached level {hero.level} with {hero.xp}/{hero.required_xp} XP"
+
+[Change Hero]
+en = "Change Hero"
+
+[Upgrade Skills]
+en = "Upgrade Skills"
+
+[Downgrade Skills]
+en = "Downgrade Skills"
+
+[Hero Infos]
+en = "Hero Infos"
+
+[Main Menu]
+en = "Warcraft: SP"
+
+[Owned Hero Text]
+en = "{hero.name} (Level: {hero.level})"
+
+[Unowned Hero Text]
+en = "{hero.name} (Required level: {hero.required_level})"
+
+[Skill Points]
+en = "Skill points: {skill_points}"
+
+[Owned Skill Text]
+en = "{skill.name} (Level: {skill.level}/{skill.max_level})"
+
+[Unowned Skill Text]
+en = "{skill.name} (Required level: {skill.required_level})"
