Renamed attr in translations
Renamed the attribute in the translations to match the changes I made
earlier in the Hero class.

--- a/srcds/resource/source-python/translations/warcraft.ini
+++ b/srcds/resource/source-python/translations/warcraft.ini
@@ -1,8 +1,8 @@
 [Hero Info]
-en = "{hero.name} - Level: {hero.level} - XP: {hero.xp}/{hero.required_xp}"
+en = "{hero.name} - Level: {hero.level} - XP: {hero.xp}/{hero.xp_quota}"
 
 [Level Up]
-en = "You've reached level {hero.level} with {hero.xp}/{hero.required_xp} XP"
+en = "You've reached level {hero.level} with {hero.xp}/{hero.xp_quota} XP"
 
 [Change Hero]
 en = "Change Hero"
