Updated menu translations to spend/reset

--- a/srcds/resource/source-python/translations/warcraft.ini
+++ b/srcds/resource/source-python/translations/warcraft.ini
@@ -7,11 +7,11 @@ en = "You've reached level {hero.level} with {hero.xp}/{hero.xp_quota} XP"
 [Change Hero]
 en = "Change Hero"
 
-[Upgrade Skills]
-en = "Upgrade Skills"
+[Spend Skills]
+en = "Spend Skills"
 
-[Downgrade Skills]
-en = "Downgrade Skills"
+[Reset Skills]
+en = "Reset Skills"
 
 [Hero Infos]
 en = "Hero Infos"
