Fixed adding heroes after reaching required level
Thanks to @Predz for finding the bug :) Fixes #8 in a more efficient way

--- a/srcds/resource/source-python/translations/warcraft.ini
+++ b/srcds/resource/source-python/translations/warcraft.ini
@@ -20,7 +20,7 @@ en = "Hero Infos"
 en = "Warcraft: SP"
 
 [Owned Hero Text]
-en = "{hero.name} (Level: {hero.level})"
+en = "{name} (Level: {level})"
 
 [Unowned Hero Text]
 en = "{hero.name} (Required level: {hero.required_level})"
